Fix safari flickering - debug

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -194,7 +194,7 @@ body {
 
 .user-details {
   text-align: center;
-  font-size: 16px;
+  font-size: 12px;
   margin: 10px auto;
 }
 
